# diary_guider

./: README.md  example.py  pyproject.toml
diaryguider/: __init__.py  config.py  extensions.py  views.py
diaryguider/auth/: __init__.py  login.py  logout.py  profile.py  register.py
diaryguider/models/: __init__.py
diaryguider/templates/: home.html  login.html  profile.html  register.html
migrations/versions/: 27b1788c2fe0_.py  6f320e08a97a_.py  78db01cd1fd0_.py  fcad4a457086_.py
src/diary_guider/: __init__.py
