[project]
name = "diary-guider"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "buptsad", email = "129638172+buptsad@users.noreply.github.com" }
]
dependencies = [
    "flask>=3.0.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "diary_guider:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/diary_guider"]
