[project]
name = "diaryguider"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "buptsad", email = "129638172+buptsad@users.noreply.github.com" }
]
dependencies = [
    "flask>=3.0.1",
    "langchain>=0.0.27",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]


[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.rye]
managed = true
dev-dependencies = []
virtual = true


[tool.rye.scripts]
devserver = "flask run --app diary_guider --debug"